# fabric-phi-deidentification-accelerator

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
_tmdl_gold_safe_model/: expressions.tmdl  relationships.tmdl
_tmdl_gold_safe_model/tables/: gold_safe_dim_department.tmdl  gold_safe_dim_diagnosis.tmdl  gold_safe_dim_facility.tmdl  gold_safe_dim_patient.tmdl  gold_safe_dim_payer.tmdl  gold_safe_dim_procedure.tmdl  gold_safe_dim_provider.tmdl  gold_safe_fact_risk_score.tmdl
config/: deid_rules.yaml
docs/: architecture_and_rationale.md  demo_presenter_cheatsheet.md  demo_runbook.md  enforcement_models.md  hipaa_compliance.md  market_landscape.md  pepper_rotation_runbook.md  positioning_and_scope.md  pre_real_phi_checklist.md  safe_harbor_mapping.md  security_model.md
notebooks/: 01_bronze_ingest.ipynb  02_silver_conform.ipynb  02b_silver_deid.ipynb  03_gold_star.ipynb  03b_gold_safe.ipynb  03b_gold_safe_analytics.ipynb  NB_cleanup_gold.ipynb  NB_reidentify.ipynb  NB_scorecard.ipynb
reports/: After PHI Deidentified.pbip  Before PHI Exposed.pbip  PHI Toggle Demo.pbip  README.md
reports/.pbir/: active
reports/After PHI Deidentified.Report/: .platform  definition.pbir
reports/After PHI Deidentified.Report/definition/pages/: pages.json
reports/Before PHI Exposed.Report/: .platform  definition.pbir
reports/Before PHI Exposed.Report/definition/pages/: pages.json
reports/Gold Safe Analytics.SemanticModel/: .platform
reports/Gold Safe Analytics.SemanticModel/definition/: database.tmdl  expressions.tmdl  model.tmdl
reports/Gold Safe Analytics.SemanticModel/definition/tables/: gold_safe_fact_claim.tmdl  gold_safe_fact_encounter.tmdl
reports/PHI Toggle Demo.Report/: .platform  definition.pbir
reports/PHI Toggle Demo.Report/definition/: report.json
reports/PHI Toggle Demo.Report/definition/bookmarks/: bookmarks.json
reports/PHI Toggle Demo.Report/definition/pages/: pages.json
sample_data/caboodle_provider/: DimDepartment.csv  DimDiagnosis.csv  DimFacility.csv  DimPayer.csv  DimProcedure.csv  DimProvider.csv  DimProviderCredential.csv  DimProviderSpecialty.csv  FABRICATE_EXPORT.md  FactRiskScore.csv  ProviderDepartmentBridge.csv
scripts/: README.md  generate_sample_data.py  provision_keyvault.ps1  provision_keyvault.sh
src/fabric_phi_deid/: __init__.py  audit.py  config.py  deid_engine.py  determination.py  eval_harness.py  ner_text.py  privacy_metrics.py  tokenization.py  validation.py
src/sql/: rls_cls_policies.sql
tests/: conftest.py  test_audit.py  test_config_validation.py  test_deid_core.py  test_determination.py  test_determination_and_eval.py  test_ner_text.py  test_privacy_metrics.py  test_properties.py  test_spark_integration.py  test_validation.py
tier0/: README.md  eis_security_one_pager.md  inventory_catalog.py
(+26 files in other folders)
